@@ -618,6 +618,7 @@
 4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
 5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
 6) init.d: switch workaround in kext use config-vlan.sh instead off config-switch.sh.<br>
+7) kernel: mipd: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
 <br>
 <br>
 <b>TODO:</b><br>
